force-app/main/default/objects/TCP_Sales_Area__c/TCP_Sales_Area__c.object-meta.xml
<CustomObject>
    <label>Sales Area</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Sales Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Area</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>