force-app/main/default/objects/TCP_Sales_Area__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales area account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Area</relationshipLabel>
    <relationshipName>Sales_Area</relationshipName>
    <type>Lookup</type>
</CustomField>