force-app/main/default/objects/TCP_Sales_Area__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>