force-app/main/default/objects/TCP_Sales_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Distribution_Channel__c</columns>
    <columns>Division__c</columns>
    <columns>Sales_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>